replace all translates with 3D translate * avoid chrome flicker

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -378,7 +378,7 @@
 
     &:hover {
       .notification {
-        @include transform(translateY(.15rem));
+        @include transform(translate3D(0, .15rem, 0));
       }
     }
 
